--- a/app/homedetail/templates/homedetail.html
+++ b/app/homedetail/templates/homedetail.html
@@ -17,27 +17,28 @@
 				</div>
 				<div class="col">
 					<div class="row">
-						<div class="col"><a href="http://localhost:8082/campus/index.html#/notifications"><img src="img/dd.png" class="link-image" /></a></div>
+						<div class="col"></div>
 					</div>
+					{{userDetails}}
 					<div class="row">
 						<div class="col">Name</div>
-						<div class="col">sdfghdhdhklgghhljg</div>
+						<div class="col">{{HomeDetail.userDetails.name}}</div>
 					</div>
 					<div class="row">
 						<div class="col">Address</div>
-						<div class="col">ettyuuoioiujjjjhjj</div>
+						<div class="col">{{HomeDetail.userDetails.address}}</div>
 					</div>
 					<div class="row">
 						<div class="col">Branch</div>
-						<div class="col">ettyuuoioiujjjjhjj</div>
+						<div class="col">{{HomeDetail.userDetails.branch}}</div>
 					</div>
 					<div class="row">
 						<div class="col">Year</div>
-						<div class="col">ettyuuoioiujjjjhjj</div>
+						<div class="col">{{HomeDetail.userDetails.year}}</div>
 					</div>
 					<div class="row">
 						<div class="col">College</div>
-						<div class="col">ettyuuoioiujjjjhjj</div>
+						<div class="col">{{HomeDetail.userDetails.college}}</div>
 					</div>
 					</div>
 				<div class="col-10">
