--- a/app/login/templates/login.html
+++ b/app/login/templates/login.html
@@ -10,7 +10,7 @@
 			  <div class="col-10"></div>
 			  <div class="col">
 			  	
-			  	<div class="col loginOrSignup">Login or Sign upOOOOOOO</div><br>
+			  	<div class="col loginOrSignup">Login or Sign up</div><br>
 
 			  	<input type="text" class="userimage text-style"ng-model="Login.currentUser.email" placeholder="User name"></input>
 			  	<br>
