--- a/css/basic-style.css
+++ b/css/basic-style.css
@@ -102,3 +102,15 @@ ion-nav-view, .pane {
 .header-side-menu-scroll.space{
   margin-top:30px;
 }
+
+.home-notification-title {
+  background: #5414de;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.home-notification-description {
+  background: rgba(84, 20, 222, 0.22);
+    border-radius: 0px 0px 10px 10px;
+    margin-bottom: 10px;
+    padding-top: 10px !important;
+}
