--- a/app/feedback/templates/feedback.html
+++ b/app/feedback/templates/feedback.html
@@ -14,7 +14,7 @@
 						<div class="row">
 							<div class="col-10"></div>
 							<div class="col">
-								<textarea class="textarea-style" name="feedback"></textarea>
+								<textarea class="textarea-style" name="feedback" ng-model="Feedback.feedbackMessage"></textarea>
 							</div>
 							<div class="col-10"></div>
 						</div>
@@ -23,7 +23,7 @@
 					<div class ="col-10">
 					</div>
 					<div class ="col">
-						<input class="buttonbutton" type ="button" ng-click="Feedback.authinticateUser()" value="Post">
+						<input class="buttonbutton" type ="button" ng-click="Feedback.sendFeedback()" value="Post">
 					</div>
 					<div class ="col-10">
 					</div>
