--- a/app/sylabus/templates/sylabus.html
+++ b/app/sylabus/templates/sylabus.html
@@ -12,13 +12,30 @@
 						<div class="list list-inset sylabus-text">
 						  <label class="item item-input">
 						    <i class="icon ion-search placeholder-icon"></i>
-						    <input type="text" class="text-style" placeholder="Search">
+						    <input type="text" class="text-style" placeholder="Subject">
 						  </label>
 						</div>
 						</div>
+							<div class="col">
+							<div class="list list-inset sylabus-text">
+						  	<label class="item item-input">
+						    <i class="icon ion-search placeholder-icon"></i>
+						    <input type="text" class="text-style" placeholder="Revision">
+						  	</label>
+							</div>
+							</div>
 						<div class="col-10">
 							</div>
-					</div>
+						</div>
+						<div class="row">
+							<div class="col-10">
+							</div>
+							<div class="col search-icon">
+								<img src="img/search-icon.png">
+							</div>
+							<div class="col-10">
+							</div>
+						</div>
 					<div class="row">
 						<div class="col-10">
 						</div>
@@ -56,15 +73,44 @@
 						<div class="col-10">
 						</div>
 					</div>
-					<div class ="row">	
-					<div class ="col-33">
+
+					<div class="row">
+						<div class="col-10">
+						</div>
+						<div class="col">
+							<h4> Module 3</h4>
+						</div>
+						<div class="col-10">
+						</div>
 					</div>
-					<div class ="col">
-						<input type ="button" value="Submit">
+					<div class="row">
+						<div class="col-10">
+						</div>
+						<div class="col">
+							<input type="text" class="text-style" name="module2">
+						</div>
+						<div class="col-10">
+						</div>
 					</div>
-					<div class ="col-33">
+
+					<div class="row">
+						<div class="col-10">
+						</div>
+						<div class="col">
+							<h4> Module 4</h4>
+						</div>
+						<div class="col-10">
+						</div>
 					</div>
-				</div>
+					<div class="row">
+						<div class="col-10">
+						</div>
+						<div class="col">
+							<input type="text" class="text-style" name="module2">
+						</div>
+						<div class="col-10">
+						</div>
+					</div>
 				</div>
 				<div class="col-10">
 				</div>
