--- a/app/shared/templates/header.html
+++ b/app/shared/templates/header.html
@@ -27,7 +27,7 @@
 				</ion-item>
 
 				<ion-item nav-clear menu-close href="index.html#/notifications" class="no-padding">
-					<div class="recuerda-slide-menu"ng-click="Header.goToPage(6)"><img src="img/rr.png" class="image-style" width=10%/>  Notifications</div>
+					<div class="recuerda-slide-menu"ng-click="Header.goToPage(6)"><img src="img/rr.png" class="image-style" width=10%/>  News</div>
 				</ion-item>
 
 				<ion-item nav-clear menu-close href="index.html#/feedback" class="no-padding">
