--- a/app/homePage/templates/homePage.html
+++ b/app/homePage/templates/homePage.html
@@ -9,7 +9,8 @@
 			<div class="row">
 				<div class="col">
 					<center>
-						<a href=""><img src="img/default-user-image.png" class="home-user-img"></a>
+						<a href=""><img ng-if="!Home.userImage" src="img/default-user-image.png" class="home-user-img"></a>
+						<img ng-if="Home.userImage" class="home-user-img" style="width:30%" ng-src='{{Home.userImage}}' alt="dp"/>
 					</center>
 				</div>
 			</div>
