--- a/app/notifications/templates/notifications.html
+++ b/app/notifications/templates/notifications.html
@@ -8,7 +8,7 @@
 				<div class ="row">
 						<div class="col-10">
 						</div>
-						<div class="col"><h4>NOTIFICATIONS</h4>
+						<div class="col"><h4>News</h4>
 						</div>
 						<div class="col-10">
 						</div>
