--- a/app/timetable/templates/timetable.html
+++ b/app/timetable/templates/timetable.html
@@ -2,31 +2,31 @@
 	<ion-content class="login-page">
 		<div class="ion-content ">
 			<div class="row">
-				<div class="col-10">
-				</div>
+				<!-- <div class="col-10">
+				</div> -->
 				<div class="col">
 					<div class="row">
-						<div class="col"><h4>SUBJECT</H4>
+						<div class="col-50 full-border"><h4>SUBJECT</H4>
 						</div>
 
-						<div class="col"><h4>DATE</H4>
+						<div class="col-25 full-border align-center"><h4>DATE</H4>
 						</div>
 
-						<div class="col"><h4>TIME</H4>
+						<div class="col-25 full-border align-center"><h4>TIME</H4>
 						</div>
 
 					</div>
 					
 					<div class="row" ng-repeat="timeTable in Timetable.timetables">
-						<div class="col">{{timeTable.subject_name}}</div>
+						<div class="col-50 full-border">{{timeTable.subject_name}}</div>
 
-						<div class="col">{{timeTable.date_milli | date : 'MMM dd'}}</div>
+						<div class="col-25 full-border align-center">{{timeTable.date_milli | date : 'MMM dd'}}</div>
 
-						<div class="col">{{timeTable.time}}</div>
+						<div class="col-25 full-border align-center">{{timeTable.time}}</div>
 					</div>
 				</div>
-				<div class="col-10">
-				</div>
+				<!-- <div class="col-10">
+				</div> -->
 			</div>
 		</div>
 	</ion-content>
