View Syllabus, add union post and its enabling in side menu is done.

--- a/app/shared/templates/header.html
+++ b/app/shared/templates/header.html
@@ -30,6 +30,11 @@
 					<div class="recuerda-slide-menu"ng-click="Header.goToPage(6)"><img src="img/rr.png" class="image-style" width=10%/>  News</div>
 				</ion-item>
 
+				<ion-item nav-clear menu-close href="index.html#/unionpost" class="no-padding" ng-if="Header.showUnionLink">
+					<div class="recuerda-slide-menu"ng-click="Header.goToPage(6)"><img src="img/rr.png" class="image-style" width=10%/>  Union Post</div>
+				</ion-item>
+
+
 				<ion-item nav-clear menu-close href="index.html#/feedback" class="no-padding">
 					<div class="recuerda-slide-menu"ng-click="Header.goToPage(7)"><img src="img/feedback.png" class="image-style" width=10%/>  FeedBack</div>
 				</ion-item>
