--- a/app/unionpost/templates/unionpost.html
+++ b/app/unionpost/templates/unionpost.html
@@ -11,6 +11,16 @@
 								<h4>Post</h4></div>
 							<div class="col-10"></div>
 						</div>
+
+
+						<div class="row">
+							<div class="col-10"></div>
+							<div class="col">
+								<input type="text" ng-model="UnionPost.postTitle" />
+							</div>
+							<div class="col-10"></div>
+						</div>
+
 						<div class="row">
 							<div class="col-10"></div>
 							<div class="col">
@@ -18,6 +28,19 @@
 							</div>
 							<div class="col-10"></div>
 						</div>
+
+						<div class="row">
+							<div class="col-10"></div>
+							<div class="col">
+								<select ng-model="UnionPost.postAudience">
+									<option>All</option>
+									<option>College</option>
+								</select>
+							</div>
+							<div class="col-10"></div>
+						</div>
+
+
 					<div class ="row">
 				  		
 					<div class ="col-10">
