--- a/app/notifications/templates/notifications.html
+++ b/app/notifications/templates/notifications.html
@@ -24,6 +24,12 @@
 					<div class="row">
 						<div class="col">{{news.description}}</div>
 					</div>
+
+					<div class="row" ng-if="news.pic">
+						<div class="col">
+							<img ng-src="{{News.serverUrl+news.pic}}" style="width:100%">
+						</div>
+					</div>
 				</div>
 							
 		</div>
