--- a/app/unionpost/templates/unionpost.html
+++ b/app/unionpost/templates/unionpost.html
@@ -32,6 +32,16 @@
 						<div class="row">
 							<div class="col-10"></div>
 							<div class="col">
+							<form enctype="multipart/form-data" method="post">
+								<input type="file" name="upfile" value="Upload" id="fileupload" ng-model="UnionPost.filee">
+							</form>	
+							</div>
+							<div class="col-10"></div>
+						</div>
+
+						<div class="row">
+							<div class="col-10"></div>
+							<div class="col">
 								<select ng-model="UnionPost.postAudience">
 									<option>All</option>
 									<option>College</option>
@@ -39,7 +49,6 @@
 							</div>
 							<div class="col-10"></div>
 						</div>
-
 
 					<div class ="row">
 				  		
@@ -56,5 +65,12 @@
 					</div>
 			</div>
 		</div>
+			<!-- <form action="http://localhost:4567/upload" enctype="multipart/form-data" method="post">
+			<label for="title">Title</label>
+			<input type="text" name="title"><br>
+			<label for="upfile">File to send</label>
+			<input type="file" name="upfile"><br>
+			<input type="submit" value="Upload">
+		</form> -->
 	</ion-content>
 </ion-view>
