--- a/app/editprofile/templates/editprofile.html
+++ b/app/editprofile/templates/editprofile.html
@@ -1,5 +1,5 @@
 <ion-view title={{pageTitle}}>
-	<ion-content class="login-page">
+	<ion-content class="">
 		<div class="ion-content ">
 			<div class ="row">
 				<div class="col-10">
