Style updated, API url made configurable. Background changed.

--- a/app/editprofile/templates/editprofile.html
+++ b/app/editprofile/templates/editprofile.html
@@ -1,15 +1,6 @@
 <ion-view title={{pageTitle}}>
 	<ion-content class="">
 		<div class="ion-content ">
-			<div class ="row">
-				<div class="col-10">
-				</div>
-				<div class="col"><h4>EDIT PROFILE</h4>
-				</div>
-				<div class ="col-10">
-				</div>
-			</div>
-			 
 				<div class ="row">
 						<div class="col-10">
 						</div>
@@ -87,7 +78,7 @@
 					<div class ="col-33">
 					</div>
 					<div class ="col">
-						<input type ="button" value="Save" ng-click="Editprofile.editUserDetails()">
+						<input type ="button" class="button button-full button-assertive" value="Save" ng-click="Editprofile.editUserDetails()">
 					</div>
 					<div class ="col-33">
 					</div>
