--- a/app/feedback/templates/feedback.html
+++ b/app/feedback/templates/feedback.html
@@ -23,7 +23,7 @@
 					<div class ="col-10">
 					</div>
 					<div class ="col">
-						<input class="buttonbutton" type ="button" ng-click="Feedback.sendFeedback()" value="Post">
+						<input class="button button-assertive" type ="button" ng-click="Feedback.sendFeedback()" value="Post">
 					</div>
 					<div class ="col-10">
 					</div>
