--- a/app/homedetail/templates/homedetail.html
+++ b/app/homedetail/templates/homedetail.html
@@ -13,14 +13,13 @@
 					</center>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row home-detail-page">
 				<div class="col-10">
 				</div>
 				<div class="col">
 					<div class="row">
 						<div class="col"></div>
 					</div>
-					{{userDetails}}
 					<div class="row">
 						<div class="col">Name</div>
 						<div class="col">{{HomeDetail.userDetails.name}}</div>
