--- a/app/login/templates/login.html
+++ b/app/login/templates/login.html
@@ -1,16 +1,17 @@
 <ion-view title={{pageTitle}}>
 	<ion-content class="login-page">
 		<div class="ion-content ">
+			<div class="icon ion-gear-a float-right" style="margin-right:10px;margin-top:10px" ng-click="Login.changeServerIp()"></div>
 			<div class="row">
 				<div class="col-10"></div>
-				<div class="col"><img src="img/login.jpg" width="100%" /></div>
+				<div class="col"><img src="img/login-icon.png" width="100%" /></div>
 				<div class="col-10"></div>
 			</div>
 			<div class="row">
 			  <div class="col-10"></div>
 			  <div class="col">
 			  	
-			  	<div class="col loginOrSignup">Login or Sign up</div><br>
+			  	<!-- <div class="col loginOrSignup">Login or Sign up</div><br> -->
 
 			  	<input type="text" class="userimage text-style"ng-model="Login.currentUser.email" placeholder="User name"></input>
 			  	<br>
