--- a/app/unionpost/templates/unionpost.html
+++ b/app/unionpost/templates/unionpost.html
@@ -5,12 +5,12 @@
 				<div class="col-10">
 					</div>
 					<div class="col">
-						<div class="row">
+						<!-- <div class="row">
 							<div class="col-10"></div>
 							<div class="col">
 								<h4>Post</h4></div>
 							<div class="col-10"></div>
-						</div>
+						</div> -->
 
 
 						<div class="row">
@@ -33,7 +33,7 @@
 							<div class="col-10"></div>
 							<div class="col">
 							<form enctype="multipart/form-data" method="post">
-								<input type="file" name="upfile" value="Upload" id="fileupload" ng-model="UnionPost.filee">
+								<input type="file" class="button-assertive" name="upfile" value="Upload" id="fileupload" ng-model="UnionPost.filee">
 							</form>	
 							</div>
 							<div class="col-10"></div>
@@ -42,7 +42,7 @@
 						<div class="row">
 							<div class="col-10"></div>
 							<div class="col">
-								<select ng-model="UnionPost.postAudience">
+								<select ng-model="UnionPost.postAudience" class="full-width">
 									<option>All</option>
 									<option>College</option>
 								</select>
@@ -55,7 +55,7 @@
 					<div class ="col-10">
 					</div>
 					<div class ="col">
-						<input class="buttonbutton" type ="button" ng-click="UnionPost.sendpostMessage()" value="Post">
+						<input class="button button-assertive" type ="button" ng-click="UnionPost.sendpostMessage()" value="Post">
 					</div>
 					<div class ="col-10">
 					</div>
