deletion of mypost api completed.

--- a/app/mypost/templates/mypost.html
+++ b/app/mypost/templates/mypost.html
@@ -9,7 +9,7 @@
 				<div ng-repeat="news in MyPost.allNews" class="each-news-row">
 					<div class="row">
 						<div class="col img-align">
-							<img src="img/close.png" width="5%" ng-click="MyPost.deletePost()">
+							<img src="img/close.png" width="5%" ng-click="MyPost.deletePost(news)">
 						</div>
 					</div>
 					<div class="row">
