--- a/app/feedback/templates/feedback.html
+++ b/app/feedback/templates/feedback.html
@@ -11,6 +11,15 @@
 								<h4>FeedBack</h4></div>
 							<div class="col-10"></div>
 						</div>
+						<div class ="row">		
+					<div class ="col-10">
+					</div>
+					<div class ="col">
+						<input type ="text" class="text-style" ng-model="Feedback.feedbackTitle">
+					</div>
+					<div class ="col-10">
+					</div>
+				</div>
 						<div class="row">
 							<div class="col-10"></div>
 							<div class="col">
