--- a/app/homePage/templates/homePage.html
+++ b/app/homePage/templates/homePage.html
@@ -21,7 +21,23 @@
 					<div class="row">
 						<div class="col"><a href="#/homedetail"><img src="img/dd.png" class="link-image" /></a></div>
 					</div>
+					<div ng-if="Home.nextSeriesExam">
+						<div class="row row.border-style home-notification-title red">
+							<div class="col"><a href="index.html#/seriestimetable" style="text-decoration: none;color: white;font-weight: bold;">{{Home.nextSeriesExam.title}}</a></div>
+						</div>	
+						<div class="row home-notification-description">
+							<div class="col">{{Home.nextSeriesExam.message}}</div>
+						</div>
+					</div>
 
+					<div ng-if="Home.nextUniversityExam">
+						<div class="row row.border-style home-notification-title red">
+							<div class="col"><a href="index.html#/timetable" style="text-decoration: none;color: white;font-weight: bold;">{{Home.nextUniversityExam.title}}</a></div>
+						</div>	
+						<div class="row home-notification-description">
+							<div class="col">{{Home.nextUniversityExam.message}}</div>
+						</div>
+					</div>
 
 					<div ng-repeat="notification in Home.notifications">
 						<div class="row row.border-style home-notification-title">
