Change password API integrated.

--- a/app/changepassword/templates/changepassword.html
+++ b/app/changepassword/templates/changepassword.html
@@ -12,7 +12,7 @@
 					<div class ="col-10">
 					</div>
 					<div class ="col">
-						<input type ="text" class="text-style" ng-model="ChangePassword.currentUser.currentpassword">
+						<input type ="password" class="text-style" ng-model="ChangePassword.currentUser.currentpassword">
 					</div>
 					<div class ="col-10">
 					</div>
@@ -28,7 +28,7 @@
 					<div class ="col-10">
 					</div>
 					<div class ="col">
-						<input type ="text" class="text-style" name="npass" ng-model="ChangePassword.currentUser.newpassword">
+						<input type ="password" class="text-style" name="npass" ng-model="ChangePassword.currentUser.newpassword">
 					</div>
 					<div class ="col-10">
 					</div>
@@ -46,7 +46,7 @@
 					<div class ="col-10">
 					</div>
 					<div class ="col">
-						<input type ="text" class="text-style" name="confirmpass" ng-model="ChangePassword.currentUser.confirmpassword">
+						<input type ="password" class="text-style" name="confirmpass" ng-model="ChangePassword.currentUser.confirmpassword">
 					</div>
 					<div class ="col-10">
 					</div>
