--- a/app/shared/templates/header.html
+++ b/app/shared/templates/header.html
@@ -43,6 +43,10 @@
 					<div class="recuerda-slide-menu"ng-click="Header.goToPage(7)"><img src="img/feedback.png" class="image-style" width=10%/>  FeedBack</div>
 				</ion-item>
 
+				<ion-item nav-clear menu-close href="index.html#/changepassword" class="no-padding">
+					<div class="recuerda-slide-menu"ng-click="Header.goToPage(7)"><img src="img/feedback.png" class="image-style" width=10%/>  Change password</div>
+				</ion-item>
+
 
 				</ion-item>
 
