Forgot password API integrated.

--- a/app/login/templates/login.html
+++ b/app/login/templates/login.html
@@ -26,6 +26,8 @@
 			  	</div>
 			  	<div class="col-10"></div>
 			</div>	
+
+			<center><a href="index.html#/forgotpassword">Forgot Password</a></center>
 		</div>
 	</ion-content>
 </ion-view>
