mypost template changed

--- a/app/login/templates/forgotpassword.html
+++ b/app/login/templates/forgotpassword.html
@@ -7,7 +7,7 @@
 			<div class="row">
 				<div class="col-10">
 				</div>
-				<div class="col-80" style="color: white;margin-bottom: 10px;">
+				<div class="col-80" style="color: mediumblue;margin-bottom: 10px;">
 					Enter your Email Address
 				</div>
 				<div class="col-10">
