--- a/app/login/templates/login.html
+++ b/app/login/templates/login.html
@@ -13,11 +13,11 @@
 			  <div class="col list">
 			  	<label class="item item-input item-floating-label bcolorinput">
                     <span class="input-label" style="color: #000033;">Username</span>
-                    <input type="text" placeholder="Username" style="color:white;" ng-model="Login.currentUser.email">
+                    <input type="text" placeholder="Username" style="color:black;" ng-model="Login.currentUser.email">
                 </label>
                 <label class="item item-input item-floating-label bcolorinput">
                     <span  class="input-label" style="color: #000033;">Password</span>
-                    <input type="password" placeholder="Password" style="color:white;" ng-model="Login.currentUser.password">
+                    <input type="password" placeholder="Password" style="color:black;" ng-model="Login.currentUser.password">
                 </label>
             </div>			  	
 			  	<!-- <div class="col loginOrSignup">Login or Sign up</div><br> -->
