--- a/app/homePage/templates/homePage.html
+++ b/app/homePage/templates/homePage.html
@@ -48,9 +48,15 @@
       </li>
 
       <li class="navigation-items"> 
+      	<img src="img/changepass.png" class="image-style float-left"  style="padding-top: 7px;" width="10%"/>
+      	<a href="index.html#/changepassword" class=="float-left" >Change password</a>
+      </li>
+
+      <li class="navigation-items"> 
       	<img src="img/logout.png" class="image-style float-left"  style="padding-top: 7px;" width="10%"/ ng-click="logout()">
       	<a href="" class=="float-left" ng-click="logout()">Logout</a>
       </li>
+
    </ul>
 </div>
 
